# SG2D

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt  example_simple_epidemic.cpp
include/: SpatialGillepsie2d.hpp
source/: CMakeLists.txt  SpatialGillepsie2d.cpp
